--- a/style.css
+++ b/style.css
@@ -56,8 +56,7 @@ p {
     font-size: 16px;
 }
 
-/* HERO DIV WITH BACKGROUND IMAGE */
-
+<div>
 .hero {
     height: 800px;
     width: 100%;
@@ -65,6 +64,7 @@ p {
     background-image: url("../images/digital-marketing-meeting.png");
     background-size: cover;
     background-position: center;
+    </div>
 }
 
 /* FLOATS */
